--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,14 @@
 	}
 }
 
+.custom-scroll-bar::-webkit-scrollbar {
+	width: 4px;
+	height: 4px;
+}
+.custom-scroll-bar::-webkit-scrollbar-thumb {
+	background: rgb(202, 181, 2269);
+}
+
 /* Placeholder (at the top) */
 .ProseMirror p.is-editor-empty:first-child::before {
 	color: #adb5bd;
